--- a/Malody_Analytics_Tool/resources.qrc
+++ b/Malody_Analytics_Tool/resources.qrc
@@ -1,11 +1,11 @@
 <RCC>
   <qresource prefix="/">
-    <!-- 图标资源 -->
+    <!-- 确保路径正确 -->
+    <file>translations/malody_zh_CN.qm</file>
+
+    <!-- 图标资源 (可选) -->
     <file>icons/app_icon.png</file>
     <file>icons/open.png</file>
     <file>icons/save.png</file>
-
-    <!-- 翻译文件 -->
-    <file>translations/malody_zh_CN.qm</file>
   </qresource>
 </RCC>
